--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <script type="text/javascript" src="./components/lodash/dist/lodash.min.js"></script>
     <script type="text/javascript" src="./components/backbone/backbone-min.js"></script>
     <script type="text/javascript" src="./components/handlebars/handlebars.js"></script>
+
+    <script type="text/javascript" src="./js/app.js"></script>
+    <script type="text/javascript" src="./js/models/baseModel.js"></script>
+    <script type="text/javascript" src="./js/views/baseView.js"></script>
 </head>
 <body>
 </body>
