--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/models/baseModel.js"></script>
     <script type="text/javascript" src="./js/views/baseView.js"></script>
+
+    <script id="indexTemplate" type="text/x-handlebars-template" src="./templates/index.js"></script>
 </head>
 <body>
 </body>
