--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <script type="text/javascript" src="./js/models/baseModel.js"></script>
     <script type="text/javascript" src="./js/views/baseView.js"></script>
 
-    <script id="indexTemplate" type="text/x-handlebars-template" src="./templates/index.js"></script>
+    <script id="indexTemplate" type="text/x-handlebars-template">
+        <section>
+            <h1>{{title}}</h1>
+            <div>{{description}}</div>
+        </section>
+    </script>
+
 </head>
 <body>
 </body>
