--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <script type="text/javascript" src="./components/handlebars/handlebars.js"></script>
 
     <script type="text/javascript" src="./js/app.js"></script>
-    <script type="text/javascript" src="./js/models/baseModel.js"></script>
-    <script type="text/javascript" src="./js/views/baseView.js"></script>
+    <script type="text/javascript" src="./js/routes/mainRouter.js"></script>
+    <script type="text/javascript" src="./js/models/indexModel.js"></script>
+    <script type="text/javascript" src="./js/views/indexView.js"></script>
 
     <script id="indexTemplate" type="text/x-handlebars-template">
-        <section>
-            <h1>{{title}}</h1>
-            <div>{{description}}</div>
-        </section>
+        <h1>{{title}}</h1>
+        <div>{{description}}</div>
     </script>
 
 </head>
 <body>
+    <section id="main-content">
+    </section>
 </body>
 </html>
