--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <script type="text/javascript" src="./bower_components/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
     <script type="text/javascript" src="./bower_components/backbone/backbone-min.js"></script>
-    <script type="text/javascript" src="./bower_components/handlebars/handlebars.js"></script>
+    <script type="text/javascript" src="./bower_components/hogan/web/builds/2.0.0/hogan-2.0.0.min.js"></script>
 
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/routes/mainRouter.js"></script>
     <script type="text/javascript" src="./js/models/indexModel.js"></script>
     <script type="text/javascript" src="./js/views/indexView.js"></script>
 
-    <script id="indexTemplate" type="text/x-handlebars-template">
+    <script id="indexTemplate" type="text/template">
         <h1>{{title}}</h1>
         <div>{{description}}</div>
     </script>
