--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <script type="text/javascript" src="./bower_components/backbone/backbone-min.js"></script>
     <script type="text/javascript" src="./bower_components/hogan/web/builds/2.0.0/hogan-2.0.0.min.js"></script>
 
+    <script type="text/javascript" src="./templates/compiled.js"></script>
+
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/routes/mainRouter.js"></script>
     <script type="text/javascript" src="./js/models/indexModel.js"></script>
     <script type="text/javascript" src="./js/views/indexView.js"></script>
-
-    <script id="indexTemplate" type="text/template">
-        <h1>{{title}}</h1>
-        <div>{{description}}</div>
-    </script>
 
 </head>
 <body>
