--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script type="text/javascript" src="./bower_components/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="./bower_components/lodash/dist/lodash.min.js"></script>
-    <script type="text/javascript" src="./bower_components/backbone/backbone-min.js"></script>
-    <script type="text/javascript" src="./bower_components/hogan/web/builds/2.0.0/hogan-2.0.0.min.js"></script>
-
-    <script type="text/javascript" src="./templates/compiled.js"></script>
-
-    <script type="text/javascript" src="./js/app.js"></script>
-    <script type="text/javascript" src="./js/routes/mainRouter.js"></script>
-    <script type="text/javascript" src="./js/models/indexModel.js"></script>
-    <script type="text/javascript" src="./js/views/indexView.js"></script>
-
+    <script type='text/javascript' src="./js/libs/requirejs/require.js" data-main="js/app.js" async></script>
 </head>
 <body>
     <section id="main-content">
